--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
 .sideNavBar{
     position:fixed;
+    background-color: #b6b6aa;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
+.menuButton {
+    border: 1px black;
+}
+.hidden {
+    display:none;
 }
