--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     background-color: #b6b6aa;
     border: 1px solid black;
     border-radius: 10px;
+    z-index:20;
 }
 
 .menuButton {
@@ -10,4 +11,33 @@
 }
 .hidden {
     display:none;
+}
+.carousel {
+    /* margin:100px auto; */
+    width:150%;
+    border: 2px solid red;
+    display:flex;
+    overflow-x:auto;
+    transform:rotate(-45deg);
+}
+.carousel::-webkit-scrollbar{
+    display:none;
+}
+.group{
+    display:flex;
+    gap:2em;
+    animation:spin 10s infinite linear;
+}
+
+.card {
+    flex:0 0 5em;
+    height:2em;
+    padding:1em;
+    background:honeydew;
+    font-size: 3rem;
+    border-radius:0.2em;
+}
+@keyframes spin{
+    from{translate:0;}
+    to{translate:-100%;}
 }
